--- a/client/package.json
+++ b/client/package.json
@@ -9,22 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@hookform/resolvers": "^2.8.8",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.3",
-    "@reduxjs/toolkit": "^1.8.1",
-    "axios": "^0.26.1",
     "next": "12.1.4",
-    "next-redux-wrapper": "^7.0.5",
-    "nookies": "^2.5.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-hook-form": "^7.29.0",
-    "react-redux": "^7.2.8",
-    "sass": "^1.49.11",
-    "yup": "^0.32.11"
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
