--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.26.1",
     "next": "12.1.4",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-redux": "^7.2.8",
     "sass": "^1.49.11"
   },
   "devDependencies": {
