--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "^1.8.1",
@@ -19,8 +20,10 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.8",
-    "sass": "^1.49.11"
+    "sass": "^1.49.11",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
