--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.18.0",
     "sequelize-typescript": "^2.1.3",
+    "slugify": "^1.6.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
